--- a/public/style.css
+++ b/public/style.css
@@ -11,3 +11,16 @@ body {
   max-width: 100vw;
   min-height: 100vh;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+#app {
+  min-height: 100vh;
+  width: 100vw;
+}
